
	* new S3 methods for Friedman's partial dependence function (FPD)
        and Shapley values (SHAP)

	* better support for cold-/hot-decking missing imputation

	* better automated detection of OpenMP on Windows and macOS

        * better support for factors in data.frames 
        especially for DART where it is the most sorely needed


Changes and New Features in 5.3 (2024-07-22):
	* SHAP2.wbart: define i and j before use

Changes and New Features in 5.2 (2024-06-28):
	* releasing version for BART short course at ISBA 2024

	* adding corrected Boston housing data set

Changes and New Features in 5.1 (2024-06-20):
	* resolving UBSAN when x.test is not provided 

	* adding maxRhat for MCMC convergence diagnostics

	* adding/improving documentation for newer functions:
	Cindex, ml.gbart along with those related to FPD/SHAP

Changes and New Features in 5.0 (2024-05-18):
	* TSVS:	create names for columns if they don't exist
	        print the list of names for independent variables
	        stop at the first warning for debugging
        * HNSCC: a new installed sub-directory with data and source
	code for the Head and Neck Squamous Cell Carcinoma study
	see the new hnscc data set for more details

Changes and New Features in 4.9 (2024-04-06):
	* theta/omega DART settings now properly propagated in gbart 

Changes and New Features in 4.8 (2023-09-19):
	* for FPD, new conditional dependence method with subset arg

Changes and New Features in 4.7 (2023-07-10):
	* for FPD/FPDK/SHAP/SHAPK, the x.test argument is smarter
	now a matrix of settings corresponding to ONLY the S columns 
        of x.train in the order of S (and backwards compatible if 
        all P columns of x.train are present as initially required)
        also more realistic default of mult.impute=30 (FPDK/SHAPK only)

Changes and New Features in 4.6 (2023-05-05):
	* updates for FPD/FPDK methods and new docs

	* updates to docs and fixing examples
