@@ -26,14 +26,27 @@ SHAP2.wbart=function(object,  ## object returned from BART
               call=FALSE
               )
 {
-    if(length(S)!=2) stop('S must be of length 2')
-
     P = ncol(x.train)
+
+    L=length(S)
+    if(L!=2) stop('S must be of length 2')
+
+    if(class(S)[1] == 'character') {
+        class. <- class(x.train)[1]
+        if(class. == 'matrix') names. <- dimnames(x.train)[[2]]
+        else if(class. == 'data.frame') names. <- names(x.train)
+        S. <- 0
+        for(i in 1:L) {
+            if(S[i] %in% names.) S.[i] <- which(S[i] == names.)
+            else stop(paste0(S[i], ' has NOT been found to be a column name of x.train'))
+        }
+        S <- S.
+    }
 
     if(!all(S %in% 1:P))
         stop('some elements of S are not in x.train')
 
-    L=length(S)
+    ##L=length(S)
     x.test=cbind(x.test)
     Q=nrow(x.test)
     if(L==ncol(x.test)) {
