@@ -13,6 +13,10 @@ Main differences between BART (stable) and BART3 (development)
         especially for DART where it is the most sorely needed
 
 
+Changes and New Features in 5.4 (2024-10-01):
+	* S argument to FPD/SHAP functions: much safer and more user-friendly 
+	to supply variable names rather than indices that are easily mistaken
+
 Changes and New Features in 5.3 (2024-07-22):
 	* SHAP2.wbart: define i and j before use
 
